Added dutch Blog

--- a/_posts/2019-05-19-zwembad-(1).md
+++ b/_posts/2019-05-19-zwembad-(1).md
@@ -1,11 +1,10 @@
 ---
 title: "Het zwembad (1)"
-lang: nl
-categories: life
-permalink: /nl/zwembad-1/
+categories: zwembad
+permalink: /zwembad-1/
 ---
 Nadat we in augustus 2018 vlakbij Bordeaux een huis hadden gekocht, besloten
-we om een zwembad aan te laten leggen.  We begonnen de voorbereidingen in
+we om een zwembad aan te leggen.  We begonnen de voorbereidingen in
 oktober 2018.
 
 <!--more-->
@@ -35,13 +34,13 @@ kon beginnen. Nou, ze zouden 20 mei beginnen, :(
 En ik moest ook het hek in de tuin verwijderen omdat anders zo'n Caterpillar
 machine er niet langs zou kunnen.  Het tuinhek verwijderen was niet zo'n
 probleem, maar de palen wel: <br />
-<img src="/assets/images/swimming-pool/picture-1.jpg" alt="de tuinhekpalen" width="50%"/>
+![de tuinhekpalen](../assets/images/zwembad/1/picture-1.jpg)
 
-Dus ik kocht de goedkoopste spade om alles uit te graven en hop: <br />
-<img src="/assets/images/swimming-pool/picture-2.jpg" alt="de spade" width="50%"/>
+Dus ik kocht de goedkoopste spade om alles uit te graven: <br />
+![de spade](../assets/images/zwembad/1/picture-2.jpg)
 
 Na een middag van hard werken met flink wat regen, was dit het resultaat: <br />
-<img src="/assets/images/swimming-pool/picture-3.jpg" alt="geen obstakels" width="50%"/>
+![geen obstakels](../assets/images/zwembad/1/picture-3.jpg)
 
 De machine kan er langs, laat het echte werk maar beginnen, :)
 
