--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,14 +1,14 @@
 ---
-title: "Page Not Found"
-excerpt: "Page not found. Your pixels are in another canvas."
+title: "Pagina niet gevonden"
+excerpt: "Pagina niet gevonden. Misschien ergens anders?"
 sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+Sorry, maar de pagina die je probeert te bekijken bestaat niet --- probeer zoeken hieronder.
 
 <script>
-  var GOOG_FIXURL_LANG = 'en';
+  var GOOG_FIXURL_LANG = '{{ site.language }}';
   var GOOG_FIXURL_SITE = '{{ site.url }}'
 </script>
 <script src="https://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js">
